@@ -1,3 +1,7 @@
+2011-11-06 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 3.1.0 RC1
+
 2011-10-17 Borut Razem <borut.razem AT gmail.net>
 
 	* index.php: added dedication to Dennis M. Ritchie
